k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lonewolf-api
  labels:
    app: lonewolf-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lonewolf-api
  template:
    metadata:
      labels:
        app: lonewolf-api
    spec:
      containers:
        - name: lonewolf-api
          image: ghcr.io/dufelizardo/lonewolf-api:3a6476f8e8bc72e6cb6e7574d3bb787fccfb3948
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 10
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
