k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lonewolf
  labels:
    app: lonewolf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lonewolf
  template:
    metadata:
      labels:
        app: lonewolf
    spec:
      containers:
        - name: lonewolf
          image: ghcr.io/dufelizardo/lonewolf:37aa1301fc561392dc1744360aa7f0453d656a6b
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
