k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lonewolf-api
  labels:
    app: lonewolf-api
spec:
  selector:
    app: lonewolf-api
  ports:
    - port: 80
      targetPort: 3000
