k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lonewolf
  labels:
    app: lonewolf
spec:
  selector:
    app: lonewolf
  ports:
    - port: 80
      targetPort: 8080
