k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lonewolf
spec:
  ingressClassName: traefik
  rules:
    - host: lonewolf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lonewolf
                port:
                  number: 80
